
syntax = "proto3";

package api.measure.v1;
import "google/api/annotations.proto";

option go_package = "github.com/tkeel-io/tkeel-device/api/measure/v1;v1";
option java_multiple_files = true;
option java_package = "api.measure.v1";

service Measure {
  rpc CreateMeasure(CreateMeasureRequest) returns (CommonResponse) {
    option (google.api.http) = {
      post : "/measure"
      body : "measure"
    };
  };
  rpc UpdateMeasure(UpdateMeasureRequest) returns (CommonResponse) {
    option (google.api.http) = {
      put : "/measure/{id}"
      body : "measure"
    };
  };
  rpc DeleteMeasure(DeleteMeasureRequest) returns (CommonResponse) {
    option (google.api.http) = {
      delete : "/measure/{id}"
    };
  };
  rpc GetMeasure(GetMeasureRequest) returns (CommonResponse) {
    option (google.api.http) = {
      get : "/measure/{id}"
    };
  };
  rpc ListMeasure(ListMeasureRequest) returns (CommonResponse) {
    option (google.api.http) = {
      get : "/measure"
    };
  };
}

message CreateMeasureRequest { MeasureEntity measure = 1; }

message UpdateMeasureRequest {
  string id = 1;
  MeasureEntity measure = 2;
}

message DeleteMeasureRequest { string id = 1; }

message GetMeasureRequest { string id = 1; }

message ListMeasureRequest {}

//------------------------------------------------------------------------------
// Basic data types
//------------------------------------------------------------------------------
message MeasureEntity {
  string name = 1;

  string desc = 2;

  string device = 3;

  string data_type = 4;

  float precision = 5;

  string unit = 6;

  string measure_type = 7;

  map<string, string> ext = 8;

  string _id = 9;

  uint64 _createdAt = 10;

  uint64 _updatedAt = 11;
}

message CommonResponse { string result = 1; }